[package]

name = "cui_filemanager"
version = "0.1.0"
authors = ["neruneru0419 <neruneru55555@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
rocket = "0.4"
rocket_contrib = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"

